--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
           <a href="./index.html" class="nav-list-a">Studio</a>
         </li>
         <li class="nav-list">
-          <a href="">Portfolio</a>
+          <a href="" class="nav-list-a">Portfolio</a>
         </li>
         <li class="nav-list">
-          <a href="">Contacts</a>
+          <a href="" class="nav-list-a">Contacts</a>
         </li>
       </ul>
     </nav>
     <address class="address">
       <ul>
         <li>
-          <a href="mailto:info@devstudio.com" class="address-mail">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="address-cont">info@devstudio.com</a>
         </li>
         <li>
-          <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          <a href="tel:+110001111111" class="address-cont">+11 (000) 111-11-11</a>
         </li>
       </ul>
     </address>
@@ -62,23 +62,23 @@
           </p>
         </li>
         <li>
-          <h3>Punctuality</h3>
-          <p>
+          <h3 class="advantages-title">Punctuality</h3>
+          <p class="advantages-p">
             Bring the key message to the brand's audience for the best price
              within the shortest possible time.
           </p>
         </li>
         <li>
-          <h3>Diligence</h3>
-          <p>
+          <h3 class="advantages-title">Diligence</h3>
+          <p class="advantages-p">
             Research and confirm brands with
              the strongest digital growth
              opportunities and minimize risk.
           </p>
         </li>
         <li>
-          <h3>Technologies</h3>
-          <p>
+          <h3 class="advantages-title">Technologies</h3>
+          <p class="advantages-p">
             Design practice focused on digital
             experiences. We bring forth a deep 
             passion for problem-solving.
